# nosh

./: Cargo.toml  LICENSE  README.md
src/: data.rs  food.rs  journal.rs  lib.rs  main.rs  nutrients.rs  recipe.rs  search.rs  serving.rs
tests/: main.rs
tests/snapshots/: main__eat.snap  main__eat_missing.snap  main__food_edit_existing.snap  main__food_edit_new.snap  main__food_ls.snap  main__food_ls_pattern.snap  main__food_ls_pattern_nomatch.snap  main__food_rm-2.snap  main__food_rm.snap  main__food_rm_not_exist.snap  main__food_search-2.snap  main__food_search.snap  main__food_show.snap  main__food_show_missing.snap  main__journal_edit.snap  main__journal_show.snap  main__show_food_missing.snap
tests/testdata/food/: banana.txt  oats.txt
tests/testdata/good/food/: banana.txt  banana_oatmeal.txt  oats.txt
tests/testdata/good/journal/2024/06/: 30.txt
tests/testdata/good/recipe/: banana_oatmeal.txt
tests/testdata/journal/2024/07/: 01.txt
tests/testdata/recipe/: banana_oatmeal.txt
tests/testdata/search/: page0.json  page2.json  page3.json
tests/testdata/search/branded/: page1.json
tests/testdata/search/fndds/: page1.json
tests/testdata/search/foundation/: page1.json
tests/testdata/search/sr_legacy/: page1.json
