[package]
name = "nosh"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.6", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
tabled = "0.15.0"
tempfile = "3.10.1"
toml = "0.8.14"
which = "6.0.1"
xdg = "2.5.2"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
